WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165933
Wasm should not create empty unlinked callsites
https://bugs.webkit.org/show_bug.cgi?id=165933
Summary
Wasm should not create empty unlinked callsites
Keith Miller
Reported
2016-12-15 16:45:12 PST
Wasm should not create empty unlinked callsites
Attachments
Patch
(3.65 KB, patch)
2016-12-15 16:47 PST
,
Keith Miller
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2016-12-15 16:47:17 PST
Created
attachment 297254
[details]
Patch
Mark Lam
Comment 2
2016-12-15 17:00:18 PST
Comment on
attachment 297254
[details]
Patch LGTM
Keith Miller
Comment 3
2016-12-15 17:06:46 PST
Committed
r209891
: <
http://trac.webkit.org/changeset/209891
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug