Wasm should not create empty unlinked callsites https://bugs.webkit.org/show_bug.cgi?id=165933

Reviewed by Mark Lam.

JSTests:

* wasm/function-tests/dead-call.js: Added.

Source/JavaScriptCore:

Wasm would create holes in the unlinked callsite vector if B3 was able to
eliminate the callsite.

* wasm/WasmB3IRGenerator.cpp:
(JSC::Wasm::B3IRGenerator::addCall):

Canonical link: https://commits.webkit.org/183529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209891 268f45cc-cd09-0410-ab3c-d52691b4dbfc